<?xml version="1.0"?>
<package format="2">
  <name>image_warper</name>
  <version>0.0.0</version>
  <description>The image_warper package</description>

  <author>Deepak</author>
  
  <maintainer email="dn1057@wildcats.unh.edu">Deepak N</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>highgui</depend>
  <depend>image_transport</depend>
  <depend>project11</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <export>
  </export>
</package>
